--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,24 +1,25 @@
-name: PITA-TRAING-WORKFLOW
+name: Selenium Tests
 
 on:
   push:
-    branches: [ "master" ]
-jobs:
-      build:
-        permissions: write-all
-        runs-on: ubuntu-latest
+    branches:
+      - master
 
-        steps:
-          - uses: actions/checkout@v3
-          - name: Set up JDK 18
-            uses: actions/setup-java@v3
-            with:
-              java-version: '18'
-              distribution: 'temurin'
-              cache: maven
-          - name: Build with Maven
-            run: mvn test -DsuiteXmlFile=testNg.xml
-            #run: mvn clean install
-          # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-#          - name: Update dependency graph
-#            uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+jobs:
+  test:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up JDK
+        uses: actions/setup-java@v2
+        with:
+          java-version: '18'  # You can change this to the version of Java you're using
+
+      - name: Install dependencies
+        run: mvn clean install  # Modify this according to your Maven setup
+
+      - name: Run Selenium Tests
+        run: mvn test  # Modify this according to your Maven setup
