--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,17 +10,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up JDK
-        uses: actions/setup-java@v2
+      - uses: actions/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
         with:
-          java-version: '11'
-          distribution: 'temurin'  # Specify the distribution parameter here
-
-      - name: Install dependencies
-        run: mvn clean install  # Modify this according to your Maven setup
-
-      - name: Run Selenium Tests
-        run: mvn test  # Modify this according to your Maven setup
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+      - name: Build with Maven
+        run: mvn test -testNg.xml
