--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,21 +1,29 @@
-name: PITA-TRAING-WORKFLOW
+name: Selenium Grid Test
 
 on:
   push:
-    branches: [ "master" ]
-
+    branches: [ "master"]
 jobs:
-  build:
-    permissions: write-all
+  test:
     runs-on: ubuntu-latest
-
+    services:
+      selenium:
+        image: selenium/standalone-chrome:4.1.0
+        ports:
+          - 4444:4444
+    strategy:
+      matrix:
+        os: [mac]
+        browser: [firefox]
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v2
+
       - name: Set up JDK 18
         uses: actions/setup-java@v3
         with:
           java-version: '18'
           distribution: 'temurin'
           cache: maven
-      - name: Build with Maven
-        run: mvn test -DsuiteXmlFile=testNg.xml
+      - name: Run Selenium Tests
+        run: mvn clean test -DremoteDriverUrl=http://selenium:4444/wd/hub -Dos=${{ matrix.os }} -Dbrowser=${{ matrix.browser }} -DsuiteXmlFile=testNg.xml
